# Feriekomp

./: .dockerignore  .env.example  .gitignore  LICENSE  Procfile  README.md  app.json  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  playwright.yml
backend/: .dockerignore  Dockerfile  app.py  gunicorn.conf.py  requirements.txt
backend/feriekomp/: __init__.py  config.py  db.py  main.py  models.py  rate_limit.py  schemas.py
backend/feriekomp/api/: routes.py
backend/feriekomp/services/: ai.py  calculation.py  visits.py
backend/tests/: __init__.py  test_api.py  test_calculation.py
frontend/: .dockerignore  Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts
frontend/src/components/: Footer.tsx  Header.tsx  UserInterface.tsx
frontend/src/lib/: api.ts  validation.ts
frontend/src/pages/: _app.tsx  _document.tsx  index.tsx
frontend/src/styles/: globals.css
frontend/tests/e2e/: calculation.spec.ts  homepage.spec.ts
nginx/: Dockerfile  nginx.conf
